--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,7 +1,7 @@
 # Change baseurl before deploy
 baseurl = "http://youhess.github.io/"
 languageCode = "en-us"
-title = "Hugo Theme Stack Starter"
+title = "Aiden Chen's Blog"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
@@ -12,7 +12,7 @@ defaultContentLanguage = "en"
 hasCJKLanguage = false
 
 # Change it to your Disqus shortname before using
-disqusShortname = "hugo-theme-stack"
+disqusShortname = "Aiden-Chen"
 
 [pagination]
 pagerSize = 5
